[package]
name = "supabase-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.7"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }

[dev-dependencies]
uuid = { version = "1.10.0", features = ["v7"] }
