[package]
name = "supabase-auth"
authors = ["Eric Biggs"]
description = "Supabase Auth implementation following the official client libraries."
readme = "README.md"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["supabase", "supabase-auth", "authentication", "auth"]
categories = ["authentication", "database"]
homepage = "https://supabase.com"
repository = "https://github.com/proziam/supabase-auth"

[dependencies]
reqwest = "0.12.7"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }

[dev-dependencies]
uuid = { version = "1.10.0", features = ["v7"] }

[lints.rust]
unsafe_code = "forbid"
